// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TEST APP renders learn react link 1`] = `
<input
  placeholder="input value....."
  type="text"
/>
`;

exports[`TEST EXAMPLES test 1 - renders learn react link 1`] = `
<input
  placeholder="input value"
  type="text"
/>
`;
